--- a/css/explore.css
+++ b/css/explore.css
@@ -13,14 +13,14 @@
 	padding-right: 0.4rem;
 	padding-top: 0.15rem;
 }
-.header-right-add{
+/*.header-right-add{
 	background: url(../img/icon_add.png);
 	background-size: cover;
 	width: 0.6rem;
 	height: 0.6rem;
 	float: left;
 	
-}
+}*/
 .header-right-message{
 	background: url(../img/icon_message.png);
 	background-size: cover;
@@ -28,47 +28,31 @@
 	height: 0.6rem;
 	float: right;
 }
-.hot-topic{
+
+.explore-content{
 	padding-top: 1.3rem;
 }
-/*我的板块*/
-.line{
-	font-size: 0.25rem;
-	color:#808080;
-	background-color:#F0F0F0;
-	padding-left: 0.2rem;
-	height: 0.5rem;
-	line-height: 0.5rem;
-	clear: both;
-}
-.plate{
-	width: 3.36rem;
-	height: 0.7rem;
-	border: solid 0.02rem #F0F0F0;
-	padding: 0.15rem 0.2rem 0.15rem 0.4rem;
-	
-	
-}
-.plate:nth-child(odd){
-	float: left;
-}
-.plate:nth-child(even){
-	float: right;
-}
-.plate img{
-	width: 0.7rem;
-	height: 0.7rem;	
-	float: left;
-
-}
-.plate-title{
-	float: right;
-	line-height: 0.7rem;
+.explore-item{
 	font-size: 0.35rem;
-	padding-right: 0.9rem;
-}
+	padding: 0.3rem 0.25rem 0.2rem 0.25rem;
+	border-bottom: solid 0.02rem #F0F0F0;
+	height: 0.9rem;
 
-/*系统推荐板块*/
-.system-recommend-plate{
-	padding-bottom: 2.5rem;
+}
+.explore-item img{
+	width: 0.7rem;
+	height: 0.7rem;
+	float: left;
+
+}
+.explore-item-title{
+	line-height: 0.7rem;
+	padding-left: 0.3rem;
+}
+.explore-item-next{
+	background: url(../img/icon_next.png);
+	background-size: cover;
+	height: 0.8rem;
+	width: 0.36rem;
+	float: right;
 }
