--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,8 @@
-*{margin: 0 0 0 0;	padding: 0 0 0 0;}
-a{
-	text-decoration: none;
-}
 .header{	
-	height: 1rem;	
+	height: 0.8rem;	
 	width: 8rem;
 	background-color: #069900;
-	padding: 0.3rem 0.2rem 0.2rem 0.2rem;
+	padding: 0.1rem 0.2rem 0.2rem 0.2rem;
 	position:fixed;
     top:0;
 }
@@ -52,7 +48,7 @@ a{
 
 
 .banner{
-	padding: 1.75rem 0.2rem 0rem 0.2rem ;	
+	padding: 1.3rem 0.2rem 0rem 0.2rem ;	
 }
 .banner img{
 	width: 1.67rem;
@@ -75,6 +71,7 @@ a{
 	width: 1.25rem;
 	height: 1.25rem;
 	float: left;
+	border-radius: 0.2rem;
 }
 .games-right{
 	float: right;
@@ -104,29 +101,4 @@ a{
 	padding: 0.05rem 0.2rem;
 	border: solid 0.03rem #069900;
 	border-radius: 0.2rem;
-}
-
-.menu{
-	height: 1.07rem;
-	width: 8rem;
-	border: solid 0.02rem #F0F0F0;
-	position:fixed;
-    bottom:0;
-    background-color: #FFFFFF;
-}
-.menu-area{
-	width: 0.71rem;
-	height: 1rem;
-	display: inline-block;
-	padding-left: 0.85rem;
-}
-.menu-img{
-	background: url(../img/icon_zy01.png);
-	background-size: 0.55rem 0.55rem;
-	height: 0.55rem;
-	width: 0.55rem;
-	display: block;
-}
-.menu-title{
-	font-size: 0.28rem;
 }
